--- a/portfolio.html
+++ b/portfolio.html
@@ -1,44 +1,279 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vaishali Gupta | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f0f4f8;
+      color: #1f2937;
+      line-height: 1.6;
+    }
+
+    header {
+      text-align: center;
+      padding: 50px 20px;
+      background: linear-gradient(135deg, #3b82f6, #9333ea);
+      color: white;
+      position: relative;
+    }
+
+    header img {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      border: 5px solid white;
+      object-fit: cover;
+      animation: pulse 3s infinite ease-in-out;
+    }
+
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(255,255,255,0.7); }
+      70% { box-shadow: 0 0 0 15px rgba(255,255,255,0); }
+      100% { box-shadow: 0 0 0 0 rgba(255,255,255,0); }
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-top: 20px;
+    }
+
+    nav {
+      background: #111827;
+      display: flex;
+      justify-content: center;
+      padding: 12px 0;
+      gap: 30px;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #60a5fa;
+      text-shadow: 0 0 10px #60a5fa;
+    }
+
+    section {
+      padding: 60px 20px;
+      max-width: 960px;
+      margin: auto;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 1s ease-out, transform 1s ease-out;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    h2 {
+      font-size: 2rem;
+      color: #1e40af;
+      margin-bottom: 25px;
+      border-left: 5px solid #6366f1;
+      padding-left: 15px;
+    }
+
+    .project, .experience {
+      background: white;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      transition: transform 0.3s ease;
+    }
+
+    .project:hover, .experience:hover {
+      transform: scale(1.02);
+    }
+
+    .skills span {
+      display: inline-block;
+      margin: 8px 12px;
+      background: #e0e7ff;
+      padding: 8px 12px;
+      border-radius: 8px;
+      font-weight: 500;
+    }
+
+    .social a {
+      margin-right: 20px;
+      color: #3b82f6;
+      font-weight: bold;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .social a:hover {
+      color: #9333ea;
+      text-shadow: 0 0 10px #c084fc;
+    }
+
+    footer {
+      background: #1f2937;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    #scrollTopBtn {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      padding: 12px 16px;
+      border: none;
+      border-radius: 50%;
+      background: #3b82f6;
+      color: white;
+      font-size: 20px;
+      display: none;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      z-index: 200;
+    }
+
+    #scrollTopBtn:hover {
+      background: #2563eb;
+    }
+
+    @media (max-width: 600px) {
+      nav {
+        flex-wrap: wrap;
+        gap: 15px;
+      }
+      header h1 {
+        font-size: 1.8rem;
+      }
+    }
+  </style>
 </head>
 <body>
-<center>
-<table width = "800px" border = "2">
-<tr>
-<td rowspan = "2">
-<img src = "profile.jpg" alt= "profile" width = "100%" height = "50%">
-</td>
-<th width = "500px" height = "50px" bgcolor = "RoyalBlue">Profile</th>
-</tr>
-<tr>
-<td>
-<ul>
-<li>  Name : Vaishali Gupta</li>
-<br><li>DOB : 02/01/2004</li>
-<br><li>Course-Specialization / Batch : B.Tech.-Full Stack AI / Batch-2 </li>
-<br><li>Sap ID : 500107799</li>
-<br><li>Enrollment Number : R2142220838 </li>
-</ul>
-</td>
-</tr>
-<tr>
-<th colspan = "2" width = "500px" height = "50px" bgcolor = "RoyalBlue">Qualification & Hobbies</th>
-</tr>
-<tr>
-<td colspan = "2">To leverage my skills, passion, and leadership abilities in order to secure the position of Head of ACM 
-    Chapter, excelling in the areas of trea. Also I am the campus ambassador at GFG.
-    I am very keen to learn new things which insipire me to do more. My friendly and open nature extends to a love 
-    for connecting with people and sharing ideas.
-</td>
-</tr>
-<tr>
-<th colspan = "2" width = "500px" height = "50px" bgcolor = "RoyalBlue" >Contact</th>
-</tr>
-<tr>
-<td colspan = "2"></td>
-</tr>
-</table>
-</center>
+
+  <header>
+    <img src="profile.jpg" alt="Vaishali Gupta">
+    <h1>Vaishali Gupta</h1>
+    <p>Full-Stack AI Developer | B.Tech CSE (3rd Year)</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#experience">Experience</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I’m a B.Tech CSE 3rd-year student passionate about AI, web development, and solving real-world problems.
+      I actively contribute to hackathons and internships, building scalable apps using full-stack and machine learning tools.
+    </p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills">
+      <span>Python</span>
+      <span>Java</span>
+      <span>C</span>
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>JavaScript</span>
+      <span>React.js</span>
+      <span>MongoDB</span>
+      <span>MySQL</span>
+      <span>AWS Certified</span>
+    </div>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <strong>SANJEEVANI – Emergency Medical App</strong>
+      <p>Developed for Smart India Hackathon. Provides real-time ambulance coordination and patient tracking.</p>
+    </div>
+    <div class="project">
+      <strong>AI Algorithm Visualizer</strong>
+      <p>Interactive Java + JS visualizer of search algorithms like BFS and DFS.</p>
+    </div>
+    <div class="project">
+      <strong>Facial Recognition System</strong>
+      <p>Python + OpenCV-based real-time facial recognition with dataset training and UI.</p>
+    </div>
+    <div class="project">
+      <strong>SQL Data Analysis</strong>
+      <p>Analyzed HR datasets using joins, aggregations, and custom queries.</p>
+    </div>
+  </section>
+
+  <section id="experience">
+    <h2>Experience</h2>
+    <div class="experience">
+      <strong>Data Analyst Intern – Faxoc Jobs & HRIS Pvt Ltd</strong>
+      <p>Conducted structured data analysis to inform HR trends and dashboard decisions.</p>
+    </div>
+    <div class="experience">
+      <strong>Tech Intern – AkshayKala Pvt Ltd</strong>
+      <p>Built modules for a volunteer management system. Focused on backend & UI fixes.</p>
+    </div>
+  </section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:vaishaligupta0201@gmail.com">vaishaligupta0201@gmail.com</a></p>
+  <div class="social">
+    <a href="https://github.com/vaishalii2?tab=repositories" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/vaishaligupta02/" target="_blank">LinkedIn</a>
+  </div>
+</section>
+
+
+  <footer>
+    &copy; 2025 Vaishali Gupta | Built with 💙 and code.
+  </footer>
+
+  <button id="scrollTopBtn">&#8679;</button>
+
+  <script>
+    
+    const scrollBtn = document.getElementById('scrollTopBtn');
+    window.onscroll = () => {
+      scrollBtn.style.display = window.scrollY > 300 ? "block" : "none";
+    };
+    scrollBtn.onclick = () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    };
+
+  
+    const sections = document.querySelectorAll("section");
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) entry.target.classList.add("visible");
+      });
+    }, { threshold: 0.1 });
+
+    sections.forEach(section => observer.observe(section));
+  </script>
+
 </body>
 </html>
